--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -29,6 +29,11 @@ body {
 	vertical-align: baseline;
 }
 
+
+/** 縦書き用 ページ設定以外の基本部分 */
+p {
+	text-align: justify;
+}
 img {
 	max-width: 100%;
 	max-height: 100%;
@@ -56,14 +61,6 @@ span.i {
 	font-style: italic;
 }
 
-/* 改ページ */
-.pagebreak { page-break-before: always; }
-
-/* 左右中央 */
-.lrcenter {
-	width: 100%;
-	vertical-align: middle;
-}
 /** 罫囲み */
 .border {
 	border: 1px solid #000;
@@ -192,7 +189,7 @@ span.sub {
 }
 
 /* 中央揃え */
-div.center { text-align: center;}
+div.center, div.center p { text-align: center;}
 
 /* 字下げ */
 div.top1 { margin-top: 1em; }
@@ -280,32 +277,32 @@ div.idt-24 { text-indent: -24em; }
 div.idt-25 { text-indent: -25em; }
 
 /* 地付き */
-div.btm { text-align: right; margin-bottom: 0em; }
-div.btm1 { text-align: right; margin-bottom: 1em; }
-div.btm2 { text-align: right; margin-bottom: 2em; }
-div.btm3 { text-align: right; margin-bottom: 3em; }
-div.btm4 { text-align: right; margin-bottom: 4em; }
-div.btm5 { text-align: right; margin-bottom: 5em; }
-div.btm6 { text-align: right; margin-bottom: 6em; }
-div.btm7 { text-align: right; margin-bottom: 7em; }
-div.btm8 { text-align: right; margin-bottom: 8em; }
-div.btm9 { text-align: right; margin-bottom: 9em; }
-div.btm10 { text-align: right; margin-bottom: 10em; }
-div.btm11 { text-align: right; margin-bottom: 11em; }
-div.btm12 { text-align: right; margin-bottom: 12em; }
-div.btm13 { text-align: right; margin-bottom: 13em; }
-div.btm14 { text-align: right; margin-bottom: 14em; }
-div.btm15 { text-align: right; margin-bottom: 15em; }
-div.btm16 { text-align: right; margin-bottom: 16em; }
-div.btm17 { text-align: right; margin-bottom: 17em; }
-div.btm18 { text-align: right; margin-bottom: 18em; }
-div.btm19 { text-align: right; margin-bottom: 19em; }
-div.btm20 { text-align: right; margin-bottom: 20em; }
-div.btm21 { text-align: right; margin-bottom: 21em; }
-div.btm22 { text-align: right; margin-bottom: 22em; }
-div.btm23 { text-align: right; margin-bottom: 23em; }
-div.btm24 { text-align: right; margin-bottom: 24em; }
-div.btm25 { text-align: right; margin-bottom: 25em; }
+div.btm, div.btm p { text-align: right; margin-bottom: 0em; }
+div.btm1, div.btm1 p { text-align: right; margin-bottom: 1em; }
+div.btm2, div.btm2 p { text-align: right; margin-bottom: 2em; }
+div.btm3, div.btm3 p { text-align: right; margin-bottom: 3em; }
+div.btm4, div.btm4 p { text-align: right; margin-bottom: 4em; }
+div.btm5, div.btm5 p { text-align: right; margin-bottom: 5em; }
+div.btm6, div.btm6 p { text-align: right; margin-bottom: 6em; }
+div.btm7, div.btm7 p { text-align: right; margin-bottom: 7em; }
+div.btm8, div.btm8 p { text-align: right; margin-bottom: 8em; }
+div.btm9, div.btm9 p { text-align: right; margin-bottom: 9em; }
+div.btm10, div.btm10 p { text-align: right; margin-bottom: 10em; }
+div.btm11, div.btm11 p { text-align: right; margin-bottom: 11em; }
+div.btm12, div.btm12 p { text-align: right; margin-bottom: 12em; }
+div.btm13, div.btm13 p { text-align: right; margin-bottom: 13em; }
+div.btm14, div.btm14 p { text-align: right; margin-bottom: 14em; }
+div.btm15, div.btm15 p { text-align: right; margin-bottom: 15em; }
+div.btm16, div.btm16 p { text-align: right; margin-bottom: 16em; }
+div.btm17, div.btm17 p { text-align: right; margin-bottom: 17em; }
+div.btm18, div.btm18 p { text-align: right; margin-bottom: 18em; }
+div.btm19, div.btm19 p { text-align: right; margin-bottom: 19em; }
+div.btm20, div.btm20 p { text-align: right; margin-bottom: 20em; }
+div.btm21, div.btm21 p { text-align: right; margin-bottom: 21em; }
+div.btm22, div.btm22 p { text-align: right; margin-bottom: 22em; }
+div.btm23, div.btm23 p { text-align: right; margin-bottom: 23em; }
+div.btm24, div.btm24 p { text-align: right; margin-bottom: 24em; }
+div.btm25, div.btm25 p { text-align: right; margin-bottom: 25em; }
 
 div.jzm1 { max-height: 1em; }
 div.jzm2 { max-height: 2em; }
