--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -20,9 +20,11 @@
 	<manifest>
 #if (${bookInfo.Vertical})
 		<item id="vertical" href="css/vertical.css" media-type="text/css"/>
+		<item id="vertical_middle" href="css/vertical_middle.css" media-type="text/css"/>
 		<item id="vertical_image" href="css/vertical_image.css" media-type="text/css"/>
 #else
 		<item id="horizontal" href="css/horizontal.css" media-type="text/css"/>
+		<item id="horizontal_middle" href="css/horizontal_middle.css" media-type="text/css"/>
 		<item id="horizontal_image" href="css/horizontal_image.css" media-type="text/css"/>
 #end
 		<item id="nav" properties="nav" href="xhtml/nav.xhtml" media-type="application/xhtml+xml"/>
