--- a/template/OPS/css/horizontal_text.css
+++ b/template/OPS/css/horizontal_text.css
@@ -1,10 +1,9 @@
 @charset "utf-8";
 @namespace "http://www.w3.org/1999/xhtml";
 
-/* 左右中央用 */
 @page {
 	/* 上右下左 */
-	margin: 0 0 0 0.5em;
+	margin: 0.5em 0 0 0.5em;
 }
 
 html {
@@ -17,8 +16,6 @@ html {
 	word-break: normal;
 	margin: 0;
 	padding: 0;
-	width:100%;
-	height:100%;
 }
 
 body {
@@ -31,22 +28,4 @@ body {
 	font-size: 1em;
 	line-height: 1.75;
 	vertical-align: baseline;
-	width:100%;
-	height:100%;
-}
-
-/* RMSDK */
-div.middle {
-	width:100%;
-	height:100%;
-	display: table-cell;
-	vertical-align: middle;
-}
-/* NetFront */
-table.middle {
-	width:100%;
-	height:100%;
-}
-table.middle td {
-	vertical-align: middle;
 }
