--- a/template/OPS/css/vertical_text.css
+++ b/template/OPS/css/vertical_text.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
 @namespace "http://www.w3.org/1999/xhtml";
 
-/** 縦書き用 左右中央 */
+/** 縦書き用 */
 @page {
 	/* 上右下左 */
-	margin: 0.5em 0 0 0;
+	margin: 0.5em 0.5em 0 0;
 }
 
 html {
@@ -17,8 +17,6 @@ html {
 	word-break: normal;
 	margin: 0;
 	padding: 0;
-	width:100%;
-	height:100%;
 }
 body {
 	margin: 0;
@@ -29,18 +27,4 @@ body {
 	font-size: 1em;
 	line-height: 1.75;
 	vertical-align: baseline;
-	width:100%;
-	height:100%;
-}
-
-/* 左右中央 */
-table.middle {
-	width:100%;
-	height:100%;
-}
-table.middle td {
-	width:100%;
-	height:100%;
-	display: table-cell;
-	vertical-align: middle;
 }
