--- a/template/OPS/xhtml/xhtml_header.vm
+++ b/template/OPS/xhtml/xhtml_header.vm
@@ -4,19 +4,23 @@
 <head>
 #if (${bookInfo.Vertical})
 #if (${sectionInfo.ImageFit})
-	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css" class="vertical_image" title="vertical image only"/>
+	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css" class="v_image" title="vertical image only"/>
 #elseif (${sectionInfo.Middle})
-	<link rel="stylesheet" type="text/css" href="../css/vertical_middle.css" class="vertical_middle" title="vertical middle"/>
+	<link rel="stylesheet" type="text/css" href="../css/vertical_middle.css" class="v_middle" title="vertical middle"/>
+	<link rel="stylesheet" type="text/css" href="../css/vertical.css"/>
 #else
-	<link rel="stylesheet" type="text/css" href="../css/vertical.css" class="vertical" title="vertical layout"/>
+	<link rel="stylesheet" type="text/css" href="../css/vertical_text.css" class="v_text" title="vertical layout"/>
+	<link rel="stylesheet" type="text/css" href="../css/vertical.css"/>
 #end
 #else
 #if (${sectionInfo.ImageFit})
-	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css" class="horizontal_image" title="horizontal image only"/>
+	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css" class="h_image" title="horizontal image only"/>
 #elseif (${sectionInfo.Middle})
-	<link rel="stylesheet" type="text/css" href="../css/horizontal_middle.css" class="horizontal_middle" title="horizontal middle"/>
+	<link rel="stylesheet" type="text/css" href="../css/horizontal_middle.css" class="h_middle" title="horizontal middle"/>
+	<link rel="stylesheet" type="text/css" href="../css/horizontal.css"/>
 #else
-	<link rel="stylesheet" type="text/css" href="../css/horizontal.css" class="horizontal" title="horizontal layout"/>
+	<link rel="stylesheet" type="text/css" href="../css/horizontal_text.css" class="h_text" title="horizontal layout"/>
+	<link rel="stylesheet" type="text/css" href="../css/horizontal.css"/>
 #end
 #end
 	<title>${bookInfo.Title}</title>
@@ -29,5 +33,5 @@
 <body>
 #end
 #if (${sectionInfo.Middle})
-<table class="middle"><tr><td><div class="middle">
+<table class="middle"><tr><td>
 #end
