--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -232,7 +232,7 @@ div.idt-24 { text-indent: -24em; }
 div.idt-25 { text-indent: -25em; }
 
 
-/* 地付き */
+/* 地付き 地上げ */
 div.btm, div.btm p { text-align: right; margin-right: 0em; }
 div.btm1, div.btm1 p { text-align: right; margin-right: 1em; }
 div.btm2, div.btm2 p { text-align: right; margin-right: 2em; }
