--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -29,6 +29,12 @@ p { margin: 0; }
 	border: 1px solid #000;
 	padding: 0.5em;
 }
+/** 破線罫囲み */
+.dashed_border {
+	border: 1px dashed #000;
+	padding: 0.5em;
+	display: inline-block;
+}
 
 /* 圏点 */
 span.sesame {
