--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -24,6 +24,10 @@ h6 { font: small-caps 100%; }
 
 p { margin: 0; }
 
+span.b { font-weight: bold; }
+span.i { font-style: italic; }
+span.strike { text-decoration:line-through; }
+
 /** 罫囲み */
 .border {
 	border: 1px solid #000;
