--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -8,6 +8,10 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 }
+div.img {
+	display: inline-block;
+	vertical-align: middle;
+}
 
 :link { color: #00C; background: transparent; }
 :visited { color: #609; background: transparent; }
@@ -27,15 +31,23 @@ p { margin: 0; }
 span.b { font-weight: bold; }
 span.i { font-style: italic; }
 span.strike { text-decoration:line-through; }
+span.dbl_strike { text-decoration:line-through; }
 
-/** 罫囲み */
+/* 外字文字画像 */
+.gaiji {
+	vertical-align: middle;
+}
+.gaiji img {
+	width: 1em;
+}
+/* 罫囲み */
 .border {
 	border: 1px solid #000;
 	margin: 0 0.5em;
 	padding: 0.5em;
 	display: inline-block;
 }
-/** 破線罫囲み */
+/* 破線罫囲み */
 .dashed_border {
 	border: 1px dashed #000;
 	margin: 0 0.5em;
@@ -145,7 +157,10 @@ span.font-5 { font-size: 50%; }
 span.kogaki { font-size: 50%; }
 
 /* 縦中横 */
-span.tcy {
+div.tcy {
+	display: inline-block;
+}
+.tcy span {
 	text-combine: horizontal;
 	-webkit-text-combine: horizontal;
 	-epub-text-combine: horizontal;
