画像のみのzip変換(仮)

--- a/template/OPS/css/horizontal_image.css
+++ b/template/OPS/css/horizontal_image.css
@@ -28,17 +28,18 @@ body.fit, body.cover {
 	width: 100%;
 	height: 100%;
 }
+body.fit .img {
+	text-align: center;
+	max-width: 100%;
+	max-height: 100%;
+}
 body.fit img {
 	max-width: 100%;
 	max-height: 100%;
 }
-body.fit.rmsdk img {
-	width: 100%;
-	height: auto;
-}
 
 /* 表紙画像は小さければ拡大 */
-body.cover img{
+body.cover img {
 	width: 100%;
 	height: auto;
 }
