--- a/template/OPS/css/vertical_image.css
+++ b/template/OPS/css/vertical_image.css
@@ -28,13 +28,16 @@ body.fit, body.cover {
 	width: 100%;
 	height: 100%;
 }
-body.fit img {
+body.fit .img {
+	vertical-align: middle;
+	display: table-cell;
 	max-width: 100%;
 	max-height: 100%;
 }
-body.fit.rmsdk img {
-	width: 100%;
-	height: auto;
+body.fit img {
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
 }
 
 /* 表紙画像は小さければ拡大 */
