--- a/template/OPS/css/horizontal_image.css
+++ b/template/OPS/css/horizontal_image.css
@@ -18,13 +18,15 @@ html {
 }
 
 body {
-	display: block;
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 
+
 /* ページ内 画像は縮小のみ */
-body.fit, body.cover {
+body .img {
 	width: 100%;
 	height: 100%;
 }
@@ -33,28 +35,31 @@ body.fit .img {
 	max-width: 100%;
 	max-height: 100%;
 }
-body.fit img {
+body.fit_h .img {
+	text-align: center;
 	max-width: 100%;
 	max-height: 100%;
 }
+body.fit img {
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
+}
 
 /* 表紙画像は小さければ拡大 */
+/* ページ内 画像は縮小のみ */
 body.cover img {
 	width: 100%;
 	height: auto;
 }
 
-/* 幅を合わせる 画像は縮小のみ */
-body.fit_w {
-	width: 100%;
-}
+/* 幅を合わせる 幅600px以上で縦横比4:3以上 */
 body.fit_w img {
-	max-width: 100%;
+	width: 100%;
+	height: auto;
 }
 /* 高さを合わせる 画像は縮小のみ */
-body.fit_h {
-	height: 100%;
-}
 body.fit_h img {
-	max-height: 100%;
+	width: auto;
+	height: 100%;
 }
