--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -43,15 +43,15 @@ span.dbl_strike { text-decoration:line-through; }
 /* 罫囲み */
 .border {
 	border: 1px solid #000;
-	margin: 0 0.5em;
-	padding: 0.5em;
+	margin: 0.25em;
+	padding: 0.25em;
 	display: inline-block;
 }
 /* 破線罫囲み */
 .dashed_border {
 	border: 1px dashed #000;
-	margin: 0 0.5em;
-	padding: 0.5em;
+	margin: 0.25em;
+	padding: 0.25em;
 	display: inline-block;
 }
 
