--- a/template/OPS/css/vertical_image.css
+++ b/template/OPS/css/vertical_image.css
@@ -18,21 +18,29 @@ html {
 }
 
 body {
-	display: block;
 	margin: 0;
 	padding: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /* ページ内 画像は縮小のみ */
-body.fit, body.cover {
+body.fit_h {
+	display: table;
+}
+body .img {
 	width: 100%;
 	height: 100%;
 }
 body.fit .img {
-	vertical-align: middle;
-	display: table-cell;
 	max-width: 100%;
 	max-height: 100%;
+}
+body.fit_h .img {
+	max-width: 100%;
+	max-height: 100%;
+	display: table-cell;
+	vertical-align: middle;
 }
 body.fit img {
 	max-width: 100%;
@@ -41,22 +49,19 @@ body.fit img {
 }
 
 /* 表紙画像は小さければ拡大 */
-body.cover img{
+/* ページ内 画像は縮小のみ */
+body.cover img {
 	width: 100%;
 	height: auto;
 }
 
 /* 幅を合わせる 幅600px以上で縦横比4:3以上 */
-body.fit_w {
-	width: 100%;
-}
 body.fit_w img {
-	max-width: 100%;
+	width: 100%;
+	height: auto;
 }
 /* 高さを合わせる 画像は縮小のみ */
-body.fit_h {
-	height: 100%;
-}
 body.fit_h img {
-	max-height: 100%;
+	width: auto;
+	height: 100%;
 }
