--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -9,7 +9,7 @@ img {
 	max-width: 100%;
 	max-height: 100%;
 }
-div.img {
+span.img {
 	display: inline-block;
 }
 :link { color: #00C; background: transparent; }
