--- a/template/OPS/xhtml/cover.vm
+++ b/template/OPS/xhtml/cover.vm
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
 <head>
 #if (${bookInfo.Vertical})
-	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css" class="vertical_image" title="vertical image only"/>
+	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css" class="vertical_image" title="v image"/>
 #else
-	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css" class="horizontal_image" title="horizontal image only"/>
+	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css" class="horizontal_image" title="h image"/>
 #end
 	<title>${bookInfo.Title}</title>
 </head>
 <body class="cover">
-<div class="img"><img src="../images/${coverImage.File}"/></div>
+<span class="img"><img src="../images/${coverImage.File}"/></span>
 </body>
 </html>
