--- a/template/OPS/css/vertical_image.css
+++ b/template/OPS/css/vertical_image.css
@@ -25,17 +25,14 @@ body {
 }
 
 /* ページ内 画像は縮小のみ */
-body.fit_h {
+body.fit, body.fit_h {
 	display: table;
 }
 body .img {
 	width: 100%;
 	height: 100%;
 }
-body.fit .img {
-	max-width: 100%;
-	max-height: 100%;
-}
+body.fit .img,
 body.fit_h .img {
 	max-width: 100%;
 	max-height: 100%;
