mimetypeの格納方式調整+フォントcss分離

--- a/template/OPS/xhtml/xhtml_header.vm
+++ b/template/OPS/xhtml/xhtml_header.vm
@@ -6,9 +6,11 @@
 #if (${sectionInfo.ImageFit})
 	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css"/>
 #elseif (${sectionInfo.Middle})
+	<link rel="stylesheet" type="text/css" href="../css/vertical_font.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical_middle.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical.css"/>
 #else
+	<link rel="stylesheet" type="text/css" href="../css/vertical_font.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical_text.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/vertical.css"/>
 #end
@@ -16,9 +18,11 @@
 #if (${sectionInfo.ImageFit})
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_image.css"/>
 #elseif (${sectionInfo.Middle})
+	<link rel="stylesheet" type="text/css" href="../css/horizontal_font.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_middle.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal.css"/>
 #else
+	<link rel="stylesheet" type="text/css" href="../css/horizontal_font.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal_text.css"/>
 	<link rel="stylesheet" type="text/css" href="../css/horizontal.css"/>
 #end
