--- a/template/OPS/css/horizontal_font_sample.css
+++ b/template/OPS/css/horizontal_font_sample.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 /** 横書きフォント変更 Reader用
- vertical_font.css と置き換えて利用
+ horizontal_font.css と置き換えて利用
  READER/fonts/ の下にフォントファイルをおいてsrc:urlのフォントファイル名を変更する
  フォントファイルが無い場合は標準フォントが利用される */
 
