--- a/template/OPS/css/horizontal_image.css
+++ b/template/OPS/css/horizontal_image.css
@@ -20,45 +20,30 @@ html {
 body {
 	margin: 0;
 	padding: 0;
+	text-align: center;
 	width: 100%;
 	height: 100%;
 }
 
-
-/* ページ内 画像は縮小のみ */
-body .img {
-	width: 100%;
-	height: 100%;
-}
-body.fit .img {
-	text-align: center;
+/* ページ内 */
+body img {
 	max-width: 100%;
 	max-height: 100%;
-}
-body.fit_h .img {
-	text-align: center;
-	max-width: 100%;
-	max-height: 100%;
-}
-body.fit img {
-	max-width: 100%;
-	max-height: 100%;
-	display: block;
 }
 
 /* 表紙画像は小さければ拡大 */
-/* ページ内 画像は縮小のみ */
 body.cover img {
 	width: 100%;
 	height: auto;
 }
 
-/* 幅を合わせる 幅600px以上で縦横比4:3以上 */
+/* 幅を合わせる */
 body.fit_w img {
 	width: 100%;
 	height: auto;
 }
-/* 高さを合わせる 画像は縮小のみ */
+/* 高さを合わせる */
+body.fit img,
 body.fit_h img {
 	width: auto;
 	height: 100%;
