--- a/template/OPS/css/vertical_image.css
+++ b/template/OPS/css/vertical_image.css
@@ -34,8 +34,6 @@ body .img {
 }
 body.fit .img,
 body.fit_h .img {
-	max-width: 100%;
-	max-height: 100%;
 	display: table-cell;
 	vertical-align: middle;
 }
@@ -46,18 +44,17 @@ body.fit img {
 }
 
 /* 表紙画像は小さければ拡大 */
-/* ページ内 画像は縮小のみ */
 body.cover img {
 	width: 100%;
 	height: auto;
 }
 
-/* 幅を合わせる 幅600px以上で縦横比4:3以上 */
+/* 幅を合わせる */
 body.fit_w img {
 	width: 100%;
 	height: auto;
 }
-/* 高さを合わせる 画像は縮小のみ */
+/* 高さを合わせる */
 body.fit_h img {
 	width: auto;
 	height: 100%;
