--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -16,17 +16,25 @@
 	</metadata>
 	<manifest>
 #if (${bookInfo.Vertical})
+#if (${bookInfo.ImageOnly})
+		<item id="v_image" href="css/vertical_image.css" media-type="text/css"/>
+#else
 		<item id="vertical" href="css/vertical.css" media-type="text/css"/>
 		<item id="v_font" href="css/vertical_font.css" media-type="text/css"/>
 		<item id="v_text" href="css/vertical_text.css" media-type="text/css"/>
 		<item id="v_middle" href="css/vertical_middle.css" media-type="text/css"/>
 		<item id="v_image" href="css/vertical_image.css" media-type="text/css"/>
+#end
+#else
+#if (${bookInfo.ImageOnly})
+		<item id="h_image" href="css/horizontal_image.css" media-type="text/css"/>
 #else
 		<item id="horizontal" href="css/horizontal.css" media-type="text/css"/>
 		<item id="h_font" href="css/horizontal_font.css" media-type="text/css"/>
 		<item id="h_text" href="css/horizontal_text.css" media-type="text/css"/>
 		<item id="h_middle" href="css/horizontal_middle.css" media-type="text/css"/>
 		<item id="h_image" href="css/horizontal_image.css" media-type="text/css"/>
+#end
 #end
 		<item id="nav" properties="nav" href="xhtml/nav.xhtml" media-type="application/xhtml+xml"/>
 #if (${bookInfo.InsertCoverPage})
@@ -52,13 +60,19 @@
 #if (${bookInfo.InsertCoverPage})
 		<itemref idref="cover-page" linear="yes"/>
 #end
+#if (${bookInfo.InsertTocPage})
+		<itemref idref="nav" linear="yes"/>
+#end
 #foreach(${sectionInfo} in ${sections})
 		<itemref idref="sec${sectionInfo.SectionId}" linear="yes"/>
 #end
 	</spine>
-#if (${bookInfo.InsertCoverPage})
 	<guide>
+#if (${bookInfo.InsertCoverPage})
 		<reference type="cover" title="cover-page" href="xhtml/cover.xhtml"/>
-	</guide>
 #end
+#if (${bookInfo.InsertTocPage})
+		<reference type="toc" title="nav" href="xhtml/nav.xhtml"/>
+#end
+	</guide>
 </package>
