--- a/template/OPS/css/horizontal_middle.css
+++ b/template/OPS/css/horizontal_middle.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 @namespace "http://www.w3.org/1999/xhtml";
 
-/* 左右中央用 */
+/* 横書き左右中央 */
 @page {
 	/* 上右下左 */
 	margin: 0 0 0 0.5em;
@@ -32,8 +32,8 @@ body {
 	height:100%;
 }
 
-/* RMSDK */
-div.middle {
+/* 左右中央 */
+table.middle {
 	width:100%;
 	height:100%;
 }
