--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -42,6 +42,9 @@
 #if (${bookInfo.InsertCoverPage})
 		<item id="cover-page" href="xhtml/cover.xhtml" media-type="application/xhtml+xml"/>
 #end
+#if (${bookInfo.InsertTitlePage})
+		<item id="sec0001" href="xhtml/0001.xhtml" media-type="application/xhtml+xml"/>
+#end
 #foreach(${sectionInfo} in ${sections})
 		<item id="sec${sectionInfo.SectionId}" href="xhtml/${sectionInfo.SectionId}.xhtml" media-type="application/xhtml+xml"/>
 #end
@@ -61,6 +64,9 @@
 #end
 #if (${bookInfo.InsertCoverPage})
 		<itemref idref="cover-page" linear="yes"/>
+#end
+#if (${bookInfo.InsertTitlePage})
+		<itemref idref="sec0001" linear="yes"/>
 #end
 #if (${bookInfo.InsertTocPage})
 		<itemref idref="nav" linear="yes"/>
