--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -150,6 +150,7 @@ span.left_underline {
 .font3 { font-size: 130%; }
 .font4 { font-size: 140%; }
 .font5 { font-size: 150%; }
+.font6 { font-size: 160%; }
 /* 文字サイズ 小 */
 .font-1 { font-size: 90%; }
 .font-2 { font-size: 80%; }
