--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -49,11 +49,23 @@ p { margin: 0; }
 	padding: 0.25em;
 	display: inline-block;
 }
+.jzm .border {
+	display: block;
+}
+.jzm .p .border {
+	display: inline-block;
+}
 /* 破線罫囲み */
 .dashed_border {
 	border: 1px dashed #000;
 	margin: 0.25em;
 	padding: 0.25em;
+	display: inline-block;
+}
+.jzm .dashed_border {
+	display: block;
+}
+.jzm .p .dashed_border {
 	display: inline-block;
 }
 
