--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -46,10 +46,22 @@ p { margin: 0; }
 	border: 1px solid #000;
 	padding: 0.5em;
 }
+.jzm .border {
+	display: block;
+}
+.jzm .p .border {
+	display: inline-block;
+}
 /* 破線罫囲み */
 .dashed_border {
 	border: 1px dashed #000;
 	padding: 0.5em;
+	display: inline-block;
+}
+.jzm .dashed_border {
+	display: block;
+}
+.jzm .p .dashed_border {
 	display: inline-block;
 }
 
